# rust_rocket_plus_mongodb

./: Cargo.toml
src/: config.rs  main.rs
src/api/: auth.rs  example_auth_api.rs  example_cookies_api.rs  example_forms_api.rs  example_products_api.rs  example_query_params_api.rs  example_response_api.rs  example_simple_api.rs  mod.rs  user_api.rs
src/api/custom_from_request/: mod.rs  user_agent_from_request.rs
src/api/utils/: make_requests.rs  mod.rs  response.rs
src/repository/: mongodb_repo.rs
