[package]
name = "rocket_rust_mongodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.136"
dotenv = "0.15.0"
reqwest = "0.11.11"
jsonwebtoken = "8.1.1"
random-string = "1.0.0"
chrono = { version = "0.4.19", features = ["serde"] }

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"]
